# vortex-libs

./: .gitignore  Cargo.toml  build.rs  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
bsp/: Cargo.toml
bsp/src/: build._bck_rs
bsp/src/boards/: f103c8.rs  h743vi.rs  mod.rs  std.rs
examples/: blinky.rs  simple_task.rs  uart_splitted.rs
examples/ahrs/: Cargo.toml
examples/ahrs/src/: main.rs
examples/ahrs/src/gcs/: mod.rs
examples/ahrs/src/ins/: mod.rs
examples/ahrs/src/tasks/: mod.rs
examples/ahrs/src/tasks/gcs/: mod.rs
examples/ahrs/src/tasks/ins/: mod.rs
examples/basic-template/: Cargo.toml  build.rs
examples/basic-template/src/: main.rs
examples/mavlink-router/: Cargo.toml
examples/mavlink-router/src/: main.rs
examples/mavlink-router/src/gcs/: mod.rs
examples/pwm/: Cargo.toml
examples/pwm/src/: main.rs
examples/pwm/src/tasks/: mod.rs
examples/pwm/src/tasks/gcs/: mod.rs
examples/sdcard/: Cargo.toml
examples/sdcard/src/: main.rs
examples/serial_manager/: Cargo.toml
examples/serial_manager/src/: main.rs
examples/simple-tasks/: Cargo.toml
examples/simple-tasks/src/: fmt.rs  main.rs
libraries/icm42688/: Cargo.toml
libraries/icm42688/src/: lib.rs  register.rs
libraries/imu/: Cargo.toml
libraries/imu/src/: lib.rs
libraries/logger/: Cargo.toml
libraries/logger/src/: lib.rs
libraries/scheduler/src/: lib.rs
libraries/serial-manager/: Cargo.toml
libraries/serial-manager/src/: lib.rs
libraries/servo-control/: Cargo.toml
libraries/servo-control/src/: lib.rs
libraries/singleton/: Cargo.toml
libraries/singleton/singleton-procmacro/: Cargo.toml
libraries/singleton/singleton-procmacro/src/: lib.rs
libraries/singleton/src/: lib.rs
src/: main.rs
src/boards/: f407ve.rs  mod.rs  std.rs
src/bsp/: Cargo.toml
src/bsp/boards/: empty_tmpl._rs  std.rs
src/bsp/boards/memoryx/: stm32f103c8_memory.x
src/bsp/src/: lib.rs
src/bsp/src/boards/: f103c8.rs  h743vi.rs  std.rs
src/hal/: mod.rs  serial_manager.rs
src/hal/boards/: f103c8.rs  f407vg.rs  h743vi.rs  mod.rs  std._rs_unimpl  std.rs
src/hal/boards/memoryx/: stm32f103c8_memory_bl.x
src/hal/gpio/: dummy_gpio.rs  mod.rs
src/hal/serial/: dummy_serial.rs  mod.rs  serial_manager.rs
src/libs/: fmt.rs  mod.rs
src/libs/gcs/: mod.rs
src/libs/icm42688/: Cargo.toml
src/libs/icm42688/src/: lib.rs
src/libs/scheduler/: mod.rs
src/libs/scheduler/src/: lib.rs
tools/: log_to_AP_log.py
