workspace = { members = [
  "examples/ahrs",
  "examples/basic-template",
  "examples/serial_manager",
  "examples/simple-tasks",
  "src/bsp",
  "src/libs/scheduler",
  "src/libs/serial-manager",
] }

[package]
name = "embassy-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = true
opt-level = 0           # <-
overflow-checks = true  # <-
lto = false

# [profile.dev.package."embassy-stm32"]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = true
# opt-level = 0           # <-
# overflow-checks = true  # <-

[profile.dev.package."*"]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = true
opt-level = "z"          # <-
overflow-checks = false  # <-
#
# # cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 2            # <-
# overflow-checks = false  # <-
