workspace = { members = [
  "examples/ahrs",
  "examples/serial_manager",
  "examples/simple-tasks",
  "bsp",
  "libraries/scheduler",
  "libraries/serial-manager",
] }

[package]
name = "embassy-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = { version = "0.7.0", optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

bsp = { version = "*", path = "bsp" }

[dependencies.embassy-executor]
version = "0.4.0"
git = "https://github.com/embassy-rs/embassy.git"
rev = "713457ce0087efc2bcf81653feb0f1503c190e53"
features = ["nightly"]

[dependencies.embassy-time]
version = "0.2.0"
git = "https://github.com/embassy-rs/embassy.git"
rev = "713457ce0087efc2bcf81653feb0f1503c190e53"

[dependencies.embassy-futures]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
rev = "713457ce0087efc2bcf81653feb0f1503c190e53"

[features]
default = [
  "h743vi",
  "defmt",
  # "f103c8",
  # "std"
]

stm32 = ["cortex-m-rt", "embassy-executor/arch-cortex-m", "bsp/memoryx"]

f103c8 = ["stm32", "bsp/f103c8"]
h743vi = ["bsp/h743vi", "stm32"]

std = ["bsp/std"]

defmt = [
  "dep:defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-executor/defmt",
  "bsp/defmt",
]


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = true
opt-level = 0           # <-
overflow-checks = true  # <-
lto = false

# [profile.dev.package."embassy-stm32"]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = true
# opt-level = 0           # <-
# overflow-checks = true  # <-

[profile.dev.package."*"]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = true
opt-level = "z"         # <-
overflow-checks = false # <-
#
# # cargo build/run --release
# [profile.release]
# codegen-units = 1
# debug = 2
# debug-assertions = false # <-
# incremental = false
# lto = 'fat'
# opt-level = 2            # <-
# overflow-checks = false  # <-
