[package]
name = "bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io-async = { version = "0.6.1" }
static_cell = { version = "1.1", features = ["nightly"] }
ringbuf = { version = "0.3.3", default-features = false }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
async-io = { version = "1.6.0", optional = true }
nalgebra = { version = "0.32.3", default-features = false, optional = true }
heapless = { version = "0.7.16", optional = true }

serial-manager = { version = "*", path = "../libraries/serial-manager" }
icm42688 = { version = "*", path = "../libraries/icm42688", features = [
  "async",
], optional = true }
imu = {version = "*", path = "../libraries/imu"}
servo-control = {version = "*", path="../libraries/servo-control"}
logger = { version = "*", path = "../libraries/logger" }
async-iterator = { version = "2.1", default-features = false }

[dependencies.embedded-fatfs]
version = "*"
git = "https://github.com/MabezDev/embedded-fatfs"
branch = "master"
default-features = false
optional=true

[dependencies.embassy-sync]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[dependencies.embassy-stm32]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"
features = ["unstable-pac", "time-driver-any", "exti", "chrono"]
optional = true

[dependencies.embassy-executor]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"
features = ["nightly"]

[dependencies.embassy-time]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[dependencies.embassy-futures]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[dependencies.embassy-usb]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[dependencies.embassy-embedded-hal]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[features]
# default = [
  # "matek_h743",
  # "defmt"
  # "h743vi"
  # "matek_h743"
# ]

stm32 = [
  "embassy-stm32",
  "embassy-time/tick-hz-32_768",
  "cortex-m",
  "cortex-m-rt",
  "embassy-executor/executor-thread",
  "embassy-executor/integrated-timers",
  "embassy-executor/arch-cortex-m",
  "embassy-executor/executor-interrupt",
]

defmt = [
  "dep:defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-executor/defmt",
  "embassy-stm32/defmt",
  "embedded-fatfs/defmt"
  # "embassy-usb/defmt",
]

f103c8 = ["stm32", "embassy-stm32/stm32f103c8"]

h743vi = [
  "stm32",
  "embassy-stm32/stm32h743vi",
  "multiprio"
  # "nalgebra",
  # "icm42688",
  # "micromath",
  # "mavlink",
]
multiprio = []
sdcard = []
imu = []

matek_h743 = ["h743vi", "heapless", "embedded-fatfs", "nalgebra", "icm42688", "sdcard", "imu"]

std = [
  "embassy-executor/arch-std",
  "embassy-executor/executor-thread",
  "embassy-executor/log",
  "embassy-executor/integrated-timers",
  "embassy-time/log",
  "embassy-time/std",
  "async-io",
  "embedded-io-async/std",
]

memoryx = ["embassy-stm32/memory-x"]
