[package]
name = "basic-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = { version = "0.7.0", optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

bsp = { version = "*", path = "../../src/bsp" }

[dependencies.embassy-executor]
version = "0.4.0"
git = "https://github.com/embassy-rs/embassy.git"
rev = "713457ce0087efc2bcf81653feb0f1503c190e53"
features = ["nightly"]

[dependencies.embassy-time]
version = "0.2.0"
git = "https://github.com/embassy-rs/embassy.git"
rev = "713457ce0087efc2bcf81653feb0f1503c190e53"

[dependencies.embassy-futures]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
rev = "713457ce0087efc2bcf81653feb0f1503c190e53"

[features]
default = [
  "h743vi",
  # "f103c8",
  # "std"
  "defmt",
]

stm32 = ["cortex-m-rt", "embassy-executor/arch-cortex-m", "bsp/memoryx"]

f103c8 = ["stm32", "bsp/f103c8"]
h743vi = ["bsp/h743vi", "stm32"]

std = ["bsp/std"]

defmt = [
  "dep:defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-executor/defmt",
  "bsp/defmt",
]
