[package]
name = "serial_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = { version = "0.7.0", optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

bsp = { version = "*", path = "../../bsp", default-features=false }
scheduler = { version = "*", path="../../libraries/scheduler"}
serial-manager = { version = "*", path="../../libraries/serial-manager"}
static_cell = { version = "1.1", features = ["nightly"] }
heapless = "0.7.16"

[dependencies.embassy-executor]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"
features = ["nightly"]

[dependencies.embassy-time]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[dependencies.embassy-futures]
version = "*"
git = "https://github.com/embassy-rs/embassy.git"
rev = "9cd0beaee37f9e1cc885ad162b63bca795478227"

[features]
default = [
  # "std"
  "h743vi",
  # "defmt",
]

stm32 = ["cortex-m-rt", "embassy-executor/arch-cortex-m", "bsp/memoryx"]

h743vi = ["bsp/h743vi", "stm32"]

std = ["bsp/std"]

defmt = [
  "dep:defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-executor/defmt",
  # "bsp/defmt",
]
