[package]
name = "imu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_cell = { version = "1.1", features = ["nightly"] }
ringbuf = { version = "0.3.3", default-features = false }
nalgebra = { version = "0.32.3", default-features = false}
embassy-sync = "0.5.0"
