[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ringbuf = { version = "0.3.3", default-features = false }
static_cell = { version = "1.1", features = ["nightly"] }
embassy-sync = "0.5.0"
defmt = { version = "0.3"}
