[package]
name = "serial-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1.3"
embassy-sync = "0.5.0"
heapless = "0.7.16"
ringbuf = { version = "0.3.3", default-features = false }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6" }
static_cell = { version = "1.1", features = ["nightly"] }

[features]
std = []
